deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-api
spec:
  selector:
    app: usuarios-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
