deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuario-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec: 
  rules:
  - host: usuario-api.tisw.cl
    http:
      paths:
      - backend:
          service:
            name: usuario-api
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - usuario-api.tisw.cl
    secretName: usuario-test-api-secret
